# DevShort

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
OneDrive/Desktop/AIOPS/backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
OneDrive/Desktop/AIOPS/backend/aiops_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
OneDrive/Desktop/AIOPS/backend/alembic/: env.py  script.py.mako
OneDrive/Desktop/AIOPS/backend/alembic/versions/: 20260624_0001_create_auth_tables.py  20260624_0002_create_aiops_domain_tables.py  20260624_2306_3a33cfecc22e_create_remaining_domain_tables.py  20260624_2310_99631174fcae_create_incident_events_table.py
OneDrive/Desktop/AIOPS/backend/app/: main.py
OneDrive/Desktop/AIOPS/backend/app/agents/: jenkins_agent.py  kubernetes_agent.py
OneDrive/Desktop/AIOPS/backend/app/ai/: prompt_manager.py  rca_engine.py
OneDrive/Desktop/AIOPS/backend/app/api/: deps.py
OneDrive/Desktop/AIOPS/backend/app/core/: authorization.py  config.py  exceptions.py  logging.py  middleware.py  request_context.py
OneDrive/Desktop/AIOPS/backend/app/db/: base.py  health.py  mixins.py  session.py
OneDrive/Desktop/AIOPS/backend/app/models/: __init__.py  alert.py  analysis.py  audit.py  incident.py  incident_event.py  metrics.py  (+3 more)
OneDrive/Desktop/AIOPS/backend/tests/: test_ai.py  test_alertmanager.py  test_auth.py  test_auth_schemas.py  test_health.py  test_incidents.py  test_jenkins.py  test_kubernetes.py  test_loki.py  test_password.py  test_prometheus.py  test_rbac.py  test_tokens.py
(+392 files in other folders)
