[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-platform-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the AIOps Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "bcrypt>=4.0.1,<4.1.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "pyjwt[crypto]>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "kubernetes>=30.1.0",
  "httpx>=0.27.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
